--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 spring.devtools.livereload.enabled  = true 
+spring.jackson.serialization.fail-on-empty-beans=false
